# sigil-runtime

./: .env.example  .gitignore  ACTI_MIGRATION_ANALYSIS.md  AUDIT_COMMUNICATION.md  AUDIT_MEMORY.md  AUDIT_ORCHESTRATION.md  CLAUDE.md  CONNECTION_STATUS.md  CUSTOMIZATIONS.md  Caddyfile  HEARTBEAT.md  INTEGRATION_MANIFEST.md  KNOWLEDGE.md  MIGRATION_MANIFEST.md  README.md  REPRESENTATION.md  SESSION_AND_MEMORY_ARCHITECTURE.md  TEAM_CONTEXT.md  bomba-sr-spec-v1.1-change-plan.md  bomba-sr-spec-v1.1.md  docker-compose.yml  implementation-plan-e2e-parallel.md  pyproject.toml  research-notes-agentic-memory-search.md  runtime-roadmap-coding-agent.md
.claude/: settings.json
.serena/: project.yml
acceptance/: implementation-execution-report.md  phase4-runtime-gateway.md  product-sequences-1-5.md  wave0-contracts-and-migrations.md
contracts/: approval-item.schema.json  context-assembly-request.schema.json  model-capabilities.schema.json  plugin-manifest.schema.json  project.schema.json  runtime-metrics.schema.json  search-plan.schema.json  search-result-pack.schema.json  shared-memory-write.schema.json  skill-descriptor.schema.json  skill-manifest.schema.json  subagent-event.schema.json  subagent-task.schema.json  task.schema.json  team-manager.api.json  tool-definition.schema.json  tool-governance-policy.schema.json  user-profile.schema.json
dashboard/: index.html
deliverables/: ACT-I_Competitive_Positioning_Brief.md
docs/: 01-overview.md  02-architecture.md  03-config-reference.md  04-cli-reference.md  05-http-api-reference.md  06-components-reference.md  README.md  (+4 more)
(+1962 files in other folders)
